loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:2: error: value to2 is not a member of Int
  for(j<-1 to2){
           ^